@@ -497,8 +497,7 @@ static const struct interval_wcwidth table_wcwidth[] = {
     {0x10a0,0x10c5,{1,1,1,1,1,1,1}},
     {0x10d0,0x10f8,{1,1,1,1,1,1,1}},
     {0x10fb,0x10fb,{1,1,1,1,1,1,1}},
-    {0x1100,0x1159,{2,2,2,2,2,2,2}},
-    {0x115f,0x115f,{2,2,2,2,2,2,2}},
+    {0x1100,0x115f,{2,2,2,2,2,2,2}},
     {0x1200,0x1206,{1,1,1,1,1,1,1}},
     {0x1208,0x1246,{1,1,1,1,1,1,1}},
     {0x1248,0x1248,{1,1,1,1,1,1,1}},
@@ -536,7 +535,7 @@ static const struct interval_wcwidth table_wcwidth[] = {
     {0x1740,0x1751,{1,1,1,1,1,1,1}},
     {0x1760,0x176c,{1,1,1,1,1,1,1}},
     {0x176e,0x1770,{1,1,1,1,1,1,1}},
-    {0x1780,0x17b6,{1,1,1,1,1,1,1}},
+    {0x1780,0x17b3,{1,1,1,1,1,1,1}},
     {0x17be,0x17c5,{1,1,1,1,1,1,1}},
     {0x17c7,0x17c8,{1,1,1,1,1,1,1}},
     {0x17d4,0x17dc,{1,1,1,1,1,1,1}},
@@ -866,25 +865,27 @@ static const struct interval_wcwidth table_wcwidth[] = {
     {0x303f,0x303f,{1,1,1,1,1,1,1}},
     {0x3041,0x3096,{2,2,2,2,2,2,2}},
     {0x309b,0x30ff,{2,2,2,2,2,2,2}},
-    {0x3105,0x312c,{2,2,2,2,2,2,2}},
+    {0x3105,0x312d,{2,2,2,2,2,2,2}},
     {0x3131,0x318e,{2,2,2,2,2,2,2}},
-    {0x3190,0x31b7,{2,2,2,2,2,2,2}},
+    {0x3190,0x31ba,{2,2,2,2,2,2,2}},
+    {0x31c0,0x31e3,{2,2,2,2,2,2,2}},
     {0x31f0,0x321c,{2,2,2,2,2,2,2}},
-    {0x3220,0x3243,{2,2,2,2,2,2,2}},
-    {0x3251,0x327b,{2,2,2,2,2,2,2}},
-    {0x327f,0x32cb,{2,2,2,2,2,2,2}},
+    {0x321d,0x321e,{2,2,2,2,2,2,2}},
+    {0x3220,0x32cf,{2,2,2,2,2,2,2}},
+    {0x3250,0x327b,{2,2,2,2,2,2,2}},
+    {0x327c,0x32cf,{2,2,2,2,2,2,2}},
     {0x32d0,0x32fe,{2,2,2,2,2,2,2}},
-    {0x3300,0x3376,{2,2,2,2,2,2,2}},
+    {0x3300,0x337a,{2,2,2,2,2,2,2}},
     {0x337b,0x33dd,{2,2,2,2,2,2,2}},
+    {0x3377,0x337a,{2,2,2,2,2,2,2}},
+    {0x33de,0x3edf,{2,2,2,2,2,2,2}},
     {0x33e0,0x33fe,{2,2,2,2,2,2,2}},
+    {0x33ff,0x3eff,{2,2,2,2,2,2,2}},
     {0x3400,0x4db5,{2,2,2,2,2,2,2}},
-    {0x4e00,0x9fa5,{2,2,2,2,2,2,2}},
-    {0xa000,0xa48c,{2,2,2,2,2,2,2}},
+    {0x4dc0,0x4dff,{2,2,2,2,2,2,2}},
+    {0x4e00,0x9fcc,{2,2,2,2,2,2,2}},
+    {0xa000,0xa48f,{2,2,2,2,2,2,2}},
     {0xa490,0xa4c6,{2,2,2,2,2,2,2}},
-    // glibc thinks
-    // 0x312d, 31c0-f, 321d-e, 3250, 327c-e, 3377-a, 33de-f, 4dc0-ff, 
-    // 9fa6-bb, fa70-d9, fe10-9, fe47-8
-    // are double-width
     {0xac00,0xd7a3,{2,2,2,2,2,2,2}},
     {0xe000,0xe002,{1,1,1,1,2,1,1}},
     {0xe003,0xe003,{1,1,1,1,2,2,1}},
@@ -1692,8 +1693,9 @@ static const struct interval_wcwidth table_wcwidth[] = {
     {0xf7ed,0xf7ee,{1,1,1,1,2,2,2}},
     {0xf7ef,0xf848,{1,1,1,1,2,1,2}},
     {0xf849,0xf8ef,{1,1,1,1,2,1,1}},
-    {0xf900,0xfa2d,{2,2,2,2,2,2,2}},
-    {0xfa30,0xfa6a,{2,2,2,2,2,2,2}},
+    {0xf900,0xfa2f,{2,2,2,2,2,2,2}},
+    {0xfa30,0xfa6d,{2,2,2,2,2,2,2}},
+    {0xfa70,0xfad9,{2,2,2,2,2,2,2}},
     {0xfb00,0xfb06,{1,1,1,1,1,1,1}},
     {0xfb13,0xfb17,{1,1,1,1,1,1,1}},
     {0xfb1d,0xfb1d,{1,1,1,1,1,1,1}},
@@ -1707,8 +1709,8 @@ static const struct interval_wcwidth table_wcwidth[] = {
     {0xfd50,0xfd8f,{1,1,1,1,1,1,1}},
     {0xfd92,0xfdc7,{1,1,1,1,1,1,1}},
     {0xfdf0,0xfdfc,{1,1,1,1,1,1,1}},
-    {0xfe30,0xfe46,{2,2,2,2,2,2,2}},
-    {0xfe49,0xfe52,{2,2,2,2,2,2,2}},
+    {0xfe10,0xfe19,{2,2,2,2,2,2,2}},
+    {0xfe30,0xfe52,{2,2,2,2,2,2,2}},
     {0xfe54,0xfe66,{2,2,2,2,2,2,2}},
     {0xfe68,0xfe6b,{2,2,2,2,2,2,2}},
     {0xfe70,0xfe74,{1,1,1,1,1,1,1}},
@@ -4003,6 +4005,8 @@ static const int table_wxdigit_count =
  *      have a column width of 0.
  */
 
+/* 1929-b, a802 have been added based on comparions with glibc */
+
 static const struct interval zero_width[] = {
     // added for our purposes, the Unicode control characters
     { 0x0000, 0x001F }, { 0x007F, 0x009F },
@@ -4040,13 +4044,13 @@ static const struct interval zero_width[] = {
     { 0x1772, 0x1773 }, { 0x17B4, 0x17B5 }, { 0x17B7, 0x17BD },
     { 0x17C6, 0x17C6 }, { 0x17C9, 0x17D3 }, { 0x17DD, 0x17DD },
     { 0x180B, 0x180D }, { 0x18A9, 0x18A9 }, { 0x1920, 0x1922 },
-    { 0x1927, 0x1928 }, { 0x1932, 0x1932 }, { 0x1939, 0x193B },
+    { 0x1927, 0x192B }, { 0x1932, 0x1932 }, { 0x1939, 0x193B },
     { 0x1A17, 0x1A18 }, { 0x1B00, 0x1B03 }, { 0x1B34, 0x1B34 },
     { 0x1B36, 0x1B3A }, { 0x1B3C, 0x1B3C }, { 0x1B42, 0x1B42 },
     { 0x1B6B, 0x1B73 }, { 0x1DC0, 0x1DCA }, { 0x1DFE, 0x1DFF },
     { 0x200B, 0x200F }, { 0x202A, 0x202E }, { 0x2060, 0x2063 },
     { 0x206A, 0x206F }, { 0x20D0, 0x20EF }, { 0x302A, 0x302F },
-    { 0x3099, 0x309A }, { 0xA806, 0xA806 }, { 0xA80B, 0xA80B },
+    { 0x3099, 0x309A }, { 0xA802, 0xA802 }, { 0xA806, 0xA806 }, { 0xA80B, 0xA80B },
     { 0xA825, 0xA826 }, { 0xFB1E, 0xFB1E }, { 0xFE00, 0xFE0F },
     { 0xFE20, 0xFE23 }, { 0xFEFF, 0xFEFF }, { 0xFFF9, 0xFFFB },
     { 0x10A01, 0x10A03 }, { 0x10A05, 0x10A06 }, { 0x10A0C, 0x10A0F },
