@@ -98,8 +98,9 @@
       underflows (for ncp > ~60).
       
       \item \code{nchar(x, "w")} assumed -1 for characters it did not
-      know about (e.g.\sspace{}zero-width spaces): it now assumes 1 (and
-      knows about zero-width characters).
+      know about (e.g.\sspace{}zero-width spaces): it now assumes 1.
+      It now  knows about zero-width characters and a few extra
+      double-width characters.
     }
   }
 }
